# MRN

./: .gitignore  README.md  launch_parallel.sh  launch_sim.sh  notes.txt  px4.params
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/patches/: mono_cam_model.sdf  tugbot_depot.sdf
.devcontainer/scripts/: .tmux.conf  bashrc-extras.sh  post-create.sh
src/: dds_pose_relay.py  model.py  plot_training.py  profiling_log.py  pyproject.toml  ros2_node.py  train_hover.py
src/configs/: sim.rviz
src/px4_gz_gym/: __init__.py  _gz_svc_helper.py  env.py  gz_step.py  px4_cmd.py  registration.py  sensors.py  test_gym.py  test_stepping.py  vec_env.py
